--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>John Merz's Portfolio</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@1,600&family=Yellowtail&display=swap');
+      </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
