--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>John Merz's Portfolio</title>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@1,600&family=Yellowtail&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Roboto+Serif:ital,wght@1,600&family=Yellowtail&display=swap');
       </style>
   </head>
   <body>
