--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     -->
     <title>John Merz's Portfolio</title>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Roboto+Serif:ital,wght@1,600&family=Yellowtail&display=swap');
-      </style>
+      @import url("https://fonts.googleapis.com/css2?family=Bungee+Shade&family=EB+Garamond&family=Roboto+Serif:ital,wght@1,600&family=Yellowtail&display=swap");
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
