--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" prefix=”og: http://ogp.me/ns#">
+<html lang="en" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -10,25 +10,25 @@
       content="Web site created using create-react-app"
     />
     <meta 
-  property=”og:title”
-  content=”Example Title” 
+  property="og:title"
+  content="John's Portfolio" 
 />
 <meta 
-  name=”image” 
+  name="image" 
   property=”og:image” 
   content=”%PUBLIC_URL%/portfolioScreenshot.JPG” 
 />
 <meta 
-  name=”author” 
-  content=”Example Author” 
+  name="author" 
+  content="John Merz" 
 />
 <meta 
-  property=”og:description” 
-  content=”Example Description“
+  property="og:description" 
+  content="Personal Portfolio page"
 />
 <meta 
-  property=”og:url” 
-  content=”https://example.com" 
+  property="og:url" 
+  content="https://www.johnmerz.com/" 
 />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
