--- a/public/index.html
+++ b/public/index.html
@@ -10,24 +10,23 @@
       content="Web site created using create-react-app"
     />
     <meta 
-  property="og:title"
+  property='og:title'
   content="John's Portfolio" 
 />
 <meta 
-  name="image" 
-  property=”og:image” 
-  content=”%PUBLIC_URL%/portfolioScreenshot.JPG” 
+  property='og:image'
+  content='%PUBLIC_URL%/portfolioScreenshot.JPG'
 />
 <meta 
   name="author" 
   content="John Merz" 
 />
 <meta 
-  property="og:description" 
-  content="Personal Portfolio page"
+  property='og:description' 
+  content='Personal Portfolio page, showcasing all my personal and school-related projects. Site was conceptualized and built entirely by John Merz'
 />
 <meta 
-  property="og:url" 
+  property='og:url' 
   content="https://www.johnmerz.com/" 
 />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
